impostazione struttura html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <title>BootStrap Freelancer</title>
 </head>
 <body>
-   
-    
+    <header>
+        <nav class="menu"></nav>
+        <section class="banner"></section>
+    </header>
+    <main>
+        <section class="portfolio"></section>
+        <section class="about"></section>
+        <section class="contact"></section>
+    </main>
+    <footer>
+        <section class="address"></section>
+        <section class="credit"></section>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
