--- a/index.html
+++ b/index.html
@@ -5,21 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>BootStrap Freelancer</title>
 </head>
-<body>
+<body class="debug">
     <header>
-        <nav class="menu"></nav>
-        <section class="banner"></section>
+        <nav class="my_menu wrapper">
+            <div class="container">
+                <div class="my_row_menu row border bg-primary">
+                    <div class="my_logo col-6 border">logo</div>
+                    <div class="my_menu col-6 border">menu</div>
+                </div>
+            </div>
+        </nav>
+        <section class="my_banner wrapper">
+            <div class="container">
+                <div class="my_row_banner row bg-secondary">
+                    <div class="my_banner col-6 border mx-auto">Banner</div>
+                </div>
+            </div>
+        </section>
     </header>
     <main>
-        <section class="portfolio"></section>
-        <section class="about"></section>
-        <section class="contact"></section>
+        <section class="my_portfolio"></section>
+        <section class="my_about"></section>
+        <section class="my_contact"></section>
     </main>
     <footer>
-        <section class="address"></section>
-        <section class="credit"></section>
+        <section class="my_address"></section>
+        <section class="my_credit"></section>
     </footer>
 
 
