--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>BootStrap Freelancer</title>
 </head>
 <body class="debug">
-    <header>
-        <nav class="my_menu wrapper">
+    <header class="wrapper">
+        <nav class="my_menu">
             <div class="container">
                 <div class="my_row_menu row border bg-primary">
                     <div class="my_logo col-6 border">logo</div>
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </nav>
-        <section class="my_banner wrapper">
+        <section class="my_banner">
             <div class="container">
                 <div class="my_row_banner row bg-secondary">
                     <div class="my_banner col-6 border mx-auto">Banner</div>
