--- a/index.html
+++ b/index.html
@@ -26,10 +26,22 @@
             </div>
         </section>
     </header>
-    <main>
-        <section class="my_portfolio"></section>
-        <section class="my_about"></section>
-        <section class="my_contact"></section>
+    <main class="wrappwer">
+        <section class="my_portfolio">
+            <div class="container">
+                <div class="my_row_portfolio row bg-success">Portfolio</div>
+            </div>
+        </section>
+        <section class="my_about">
+            <div class="container">
+                <div class="my_row_about row bg-danger">About</div>
+            </div>
+        </section>
+        <section class="my_contact">
+            <div class="container">
+                <div class="my_row_contact row bg-warning">Contact</div>
+            </div>
+        </section>
     </main>
     <footer>
         <section class="my_address"></section>
