--- a/index.html
+++ b/index.html
@@ -43,9 +43,17 @@
             </div>
         </section>
     </main>
-    <footer>
-        <section class="my_address"></section>
-        <section class="my_credit"></section>
+    <footer class="wrapper">
+        <section class="my_address">
+            <div class="container">
+                <div class="my_row_address row bg-info">Address</div>
+            </div>
+        </section>
+        <section class="my_credit">
+            <div class="container">
+                <div class="my_row_credit row bg-light">Credit</div>
+            </div>
+        </section>
     </footer>
 
 
