--- a/index.html
+++ b/index.html
@@ -28,8 +28,39 @@
     </header>
     <main class="wrappwer">
         <section class="my_portfolio">
-            <div class="container">
-                <div class="my_row_portfolio row bg-success">Portfolio</div>
+            <div class="my_container_portfolio container">
+                <div class="my_row_portfolio row bg-success">
+                    <div class="col-4 border mx-auto">Portfolio</div>
+                </div>
+            </div>
+            <div class="my_container_portfolio container">
+                <div class="my_row_portfolio row bg-success">
+                    <div class="col-8 border mx-auto">
+                        <div class="container">
+                            <div class="row g-2">
+                                <div class="col-lg-4 col-md-6 col-sm-12">
+                                    <div class="p-3 border bg-light">immagine casa</div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-12">
+                                    <div class="p-3 border bg-light">immagine torta</div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-12">
+                                    <div class="p-3 border bg-light">immagine tenda</div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-12">
+                                    <div class="p-3 border bg-light">immagine play</div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-12">
+                                    <div class="p-3 border bg-light">immagine cassa</div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-12">
+                                    <div class="p-3 border bg-light">immagine sottomarino</div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>   
             </div>
         </section>
         <section class="my_about">
