--- a/index.html
+++ b/index.html
@@ -27,50 +27,118 @@
         </section>
     </header>
     <main class="wrappwer">
+        <!-- inizio sezione portfolio  -->
         <section class="my_portfolio">
             <div class="my_container_portfolio container">
-                <div class="my_row_portfolio row bg-success">
-                    <div class="col-4 border mx-auto">Portfolio</div>
-                </div>
-            </div>
-            <div class="my_container_portfolio container">
-                <div class="my_row_portfolio row bg-success">
-                    <div class="col-8 border mx-auto">
-                        <div class="container">
-                            <div class="row g-2">
-                                <div class="col-lg-4 col-md-6 col-sm-12">
-                                    <div class="p-3 border bg-light">immagine casa</div>
+                <div class="my_row_portfolio py-4 row bg-success">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-2 border mx-auto">Portfolio</div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-4 border mx-auto"></div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-8 border mx-auto">
+                                <div class="container">
+                                    <div class="row g-2">
+                                        <div class="col-lg-4 col-md-6 col-sm-12">
+                                            <div class="p-3 border bg-light">immagine casa</div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-6 col-sm-12">
+                                            <div class="p-3 border bg-light">immagine torta</div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-6 col-sm-12">
+                                            <div class="p-3 border bg-light">immagine tenda</div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-6 col-sm-12">
+                                            <div class="p-3 border bg-light">immagine play</div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-6 col-sm-12">
+                                            <div class="p-3 border bg-light">immagine cassa</div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-6 col-sm-12">
+                                            <div class="p-3 border bg-light">immagine sottomarino</div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-lg-4 col-md-6 col-sm-12">
-                                    <div class="p-3 border bg-light">immagine torta</div>
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-12">
-                                    <div class="p-3 border bg-light">immagine tenda</div>
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-12">
-                                    <div class="p-3 border bg-light">immagine play</div>
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-12">
-                                    <div class="p-3 border bg-light">immagine cassa</div>
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-12">
-                                    <div class="p-3 border bg-light">immagine sottomarino</div>
-                                </div>
-
                             </div>
                         </div>
                     </div>
-                </div>   
+                </div>
             </div>
         </section>
+        <!-- fine sezione portfolio  -->
+        <!-- inizio sezione about  -->
         <section class="my_about">
             <div class="container">
-                <div class="my_row_about row bg-danger">About</div>
+                <div class="my_row_about row py-4 bg-danger">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-2 border mx-auto">About</div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-4 border mx-auto">stella</div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-7 border mx-auto">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-6  col-md-6 col-sm-12 border">Testo</div>
+                                        <div class="col-lg-6  col-md-6 col-sm-12 border">Testo</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-1 border mx-auto">bottone</div>
+                        </div>
+                    </div>
+                </div>    
             </div>
         </section>
+        <!-- fine sezione about  -->
         <section class="my_contact">
             <div class="container">
-                <div class="my_row_contact row bg-warning">Contact</div>
+                <div class="my_row_contact row py-4 bg-light">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-2 border mx-auto">Contact</div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-4 border mx-auto">stella</div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-7 border mx-auto">Dati anagrafici</div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-7 border mx-auto">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-1 border">bottone</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                   
+                </div>    
             </div>
         </section>
     </main>
