--- a/index.html
+++ b/index.html
@@ -145,12 +145,24 @@
     <footer class="wrapper">
         <section class="my_address">
             <div class="container">
-                <div class="my_row_address row bg-info">Address</div>
+                <div class="my_row_address row py-4 bg-info">
+                    <div class="col-8 border mx-auto">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-4 border">Location</div>
+                                <div class="col-4 border">WEB</div>
+                                <div class="col-4 border">About</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="my_credit">
             <div class="container">
-                <div class="my_row_credit row bg-light">Credit</div>
+                <div class="my_row_credit row bg-light">
+                    <div class="col-1 border mx-auto">Credit</div>
+                </div>
             </div>
         </section>
     </footer>
