--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>BootStrap Freelancer</title>
 </head>
-<body class="debug">
+<body class="">
     <header class="wrapper">
         <!-- inizio menu  -->
-        <nav class="my_nav_menu navbar navbar-expand-lg navbar-light gray">
+        <nav id="my_nav_menu" class="navbar navbar-expand-lg navbar-dark gray">
             <div class="my_nav-container container-fluid">
                 <a class="navbar-brand" href="#">START BOOTSTRAP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon white"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -36,69 +37,72 @@
         <!-- inizio banner  -->
         <section class="my_banner">
             <div class="my_ban_container container-fluid green">
-                <div class="my_row_banner row py-4">
-                    <div class="col-3  mx-auto">
+                <div class="my_row_banner row py-5">
+                    <div class="my_ban_img col-3  mx-auto">
                         <img src="img/avatar.svg" alt="avatar">
                     </div>
-                          
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-12 border">TITOLO</div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="my_ban_titolo col-12 mx-auto text-center">
+                                <h1>START BOOTSTRAP</h1>
                             </div>
                         </div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-4 border mx-auto">stella</div>
+                        <div class="row py-3">
+                            <div class="col-4 mx-auto">
+                                <span class="riga"><i class="fas fa-star"></i></span>
                             </div>
                         </div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-12 border">Sottotitolo</div>
+                        <div class="row py-2">
+                            <div class="col-12 mx-auto text-center">
+                                <h5>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h5>
                             </div>
                         </div>
-                    <!-- </div> -->
+                    </div>
                 </div>
             </div>
         </section>
         <!-- fine banner  -->
     </header>
-    <main class="wrappwer">
+    <main class="wrapper">
         <!-- inizio sezione portfolio  -->
         <section class="my_portfolio">
             <div class="my_container_portfolio container-fluid ">
                 <div class="my_row_portfolio py-4 row">
                     <div class="container">
                         <div class="row">
-                            <div class="col-2 border mx-auto">Portfolio</div>
+                            <div class="col-12 mx-auto text-center">
+                                <h2>PORTFOLIO</h2>
+                            </div>
                         </div>
                     </div>
                     <div class="container">
-                        <div class="row">
-                            <div class="col-4 border mx-auto">stella</div>
+                        <div class="col-4 mx-auto">
+                            <span class="riga_bk"><i class="fas fa-star"></i></span>
                         </div>
                     </div>
                     <div class="container">
-                        <div class="row">
-                            <div class="col-8 border mx-auto">
+                        <div class="row py-4">
+                            <div class="col-8  mx-auto">
                                 <div class="container">
                                     <div class="row g-2">
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <div class="p-3 border bg-light">immagine casa</div>
+                                            <img src="img/cabin.png" alt="cabin">
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <div class="p-3 border bg-light">immagine torta</div>
+                                            <img src="img/cake.png" alt="cacke">
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <div class="p-3 border bg-light">immagine tenda</div>
+                                            <img src="img/circus.png" alt="circus">
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <div class="p-3 border bg-light">immagine play</div>
+                                            <img src="img/game.png" alt="game">
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <div class="p-3 border bg-light">immagine cassa</div>
+                                            <img src="img/safe.png" alt="safe">
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-sm-12">
-                                            <div class="p-3 border bg-light">immagine sottomarino</div>
+                                            <img src="img/submarine.png" alt="submarine">
+                                        </div>
                                         </div>
                                     </div>
                                 </div>
@@ -115,21 +119,33 @@
                 <div class="my_row_about row py-4">
                     <div class="container">
                         <div class="row">
-                            <div class="col-2 border mx-auto">About</div>
+                            <div class="col-12 mx-auto text-center">
+                                <h2>ABOUT</h2>
+                            </div>
                         </div>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-4 border mx-auto">stella</div>
+                        <div class="row py-1">
+                            <div class="col-4 mx-auto">
+                                <span class="riga"><i class="fas fa-star"></i></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="container">
                         <div class="row">
-                            <div class="col-7 border mx-auto">
+                            <div class="col-8 mx-auto">
                                 <div class="container">
                                     <div class="row">
-                                        <div class="col-lg-6  col-md-6 col-sm-12 border">Testo</div>
-                                        <div class="col-lg-6  col-md-6 col-sm-12 border">Testo</div>
+                                        <div class="col-lg-6  col-md-6 col-sm-12">
+                                            <p>Freelancer is a free bootstrap theme created by Start Bootstrap.
+                                                The dowload includes the complete source files including HTML,
+                                                 CSS, and JavaScript as well as optional LESS stylesheets for 
+                                                 easy customization.
+                                            </p>
+                                        </div>
+                                        <div class="col-lg-6  col-md-6 col-sm-12">
+                                            <p>Whether you're a student looking to showcase your work, a professional
+                                                looking to attract clients, or a graphic artist looking to share your projects
+                                                this temlate is the perfect starting point!
+
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -150,12 +166,16 @@
                 <div class="my_row_contact row py-4">
                     <div class="container">
                         <div class="row">
-                            <div class="col-2 border mx-auto">Contact</div>
+                            <div class="col-12 text-center mx-auto">
+                                <h2>CONTACT ME</h2>
+                            </div>
                         </div>
                     </div>
                     <div class="container">
-                        <div class="row">
-                            <div class="col-4 border mx-auto">stella</div>
+                        <div class="row py-1">
+                            <div class="col-4 mx-auto">
+                                <span class="riga_bk"><i class="fas fa-star"></i></span>
+                            </div>
                         </div>
                     </div>
                     <div class="container">
@@ -174,7 +194,6 @@
                             </div>
                         </div>
                     </div>
-                   
                 </div>    
             </div>
         </section>
